--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -16,6 +16,10 @@ body {
     height: 40px;
 }
 
+.navbar-nav .nav-link {
+    color: #f0f0f0 !important;
+}
+
 .navbar h1 {
     font-size: 1.5rem;
     margin: 0;
