--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -31,28 +31,11 @@ footer .footer-links a:hover {
     text-decoration: underline;
 }
 
-footer .social-icons a {
-    color: #ffffff;
-    font-size: 1.5rem;
-    margin: 0 10px;
-}
-
-footer .social-icons a:hover {
-    color: #17a2b8;
-}
-
 .navbar-nav {
     flex-grow: 1;
     justify-content: center;
 }
 
-.navbar h1 {
-    font-size: 1.5rem;
-    margin: 0;
-    font-weight: bold;
-}
-
-/* Hamburger Animation */
 .navbar-toggler {
     border: none;
     outline: none;
@@ -67,29 +50,16 @@ footer .social-icons a:hover {
     transition: all 0.4s ease-in-out;
 }
 
-/* Animation for first line */
 .navbar-toggler.collapsed span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
 }
 
-/* Animation for second line */
 .navbar-toggler.collapsed span:nth-child(2) {
     opacity: 0;
 }
 
-/* Animation for third line */
 .navbar-toggler.collapsed span:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -5px);
-}
-
-/* Add the reverse animation when the menu is collapsed */
-.navbar-toggler:not(.collapsed) span:nth-child(1),
-.navbar-toggler:not(.collapsed) span:nth-child(3) {
-    transform: rotate(0deg) translate(0, 0);
-}
-
-.navbar-toggler:not(.collapsed) span:nth-child(2) {
-    opacity: 1;
 }
 
 /* Calculator Container */
@@ -143,45 +113,8 @@ form select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDE2IDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTEuMzMgMGwuNy43TDggNi42bDYtNS45LjctLjctMS4zMi0xLjMtNy4zNSA3LjM1eiIgZmlsbD0iIzAwN2JmZiIvPjwvc3ZnPg==') no-repeat right 12px center;
-    padding-right: 40px;
-    background-color: #f9f9f9;
-}
-
-form select:focus {
-    background-position: right 10px center;
-}
-
-/* Improve Overall Form Styling */
-label {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #495057;
-}
-
-h4 {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #343a40;
-    margin-bottom: 1rem;
-}
-
-button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    transition: background-color 0.3s ease-in-out;
-}
-
-button[type="submit"]:hover {
-    background-color: #0056b3;
-}
-
-button#clearFormBtn {
-    background-color: #6c757d;
-    color: #fff;
-}
-
-button#clearFormBtn:hover {
-    background-color: #5a6268;
+    background: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 4 5"><path fill="none" stroke="black" stroke-width=".5" d="M2 0L0 2h4z"/></svg>') no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 8px 10px;
+    padding-right: 2rem;
 }
