--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -144,3 +144,28 @@ button {
 .success {
     border: 1px solid green;
 }
+
+
+
+
+/* Modal result styling */
+#modalResult h5 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+#modalResult p {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+/* Input validation success */
+.success {
+    border: 2px solid green;
+    background-color: #e7f9e7;
+    background-image: url('https://cdn-icons-png.flaticon.com/512/190/190411.png');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 20px;
+}
+
